--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
-    "socket.io": "^3.0.4"
+    "socket.io": "^3.0.4",
+    "socketio-auth": "^0.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
