--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "socket.io": "^3.0.4",
-    "socketio-auth": "^0.1.1"
+    "socketio-auth": "^0.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
